# scopetemplates_release

./: CMakeLists.txt  manifest.json.in  setup.sh
cmake/: FindIntltool.cmake
data/: CMakeLists.txt  scopetemplates.xiaoguo_scopetemplates.ini.in
include/api/: client.h  config.h
include/scope/: action.h  preview.h  query.h  scope.h
po/: POTFILES.in  scopetemplates.pot
src/: CMakeLists.txt
src/api/: client.cpp
src/scope/: action.cpp  preview.cpp  query.cpp  scope.cpp
